--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,43 @@
+/* Кроссбраузерный Font-face. Подключение шрифтов с домена сайта:
+
+@font-face {
+  font-family: 'PT Sans';
+  src: url('../fonts/pts55f-webfont.eot');
+  src: local('PT Sans'), local('PTSans-Regular'),
+       url('../fonts/pts55f-webfont.eot?#iefix') format('embedded-opentype'),
+       url('../fonts/pts55f-webfont.woff2') format('woff2'),
+       url('../fonts/pts55f-webfont.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+@font-face {
+  font-family: 'PT Sans bold';
+  src: url('../fonts/pts75f-webfont.eot');
+  src: local('PT Sans bold'), local('PTSans-Regular')
+       url('../fonts/pts75f-webfont.eot?#iefix') format('embedded-opentype'),
+       url('../fonts/pts75f-webfont.woff2') format('woff2'),
+       url('../fonts/pts75f-webfont.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+
+} */
+
+
 body {
   margin: 0;
   padding: 0;
-
-  font-family: "PTSans", Arial, sans-serif;
-  font-size: 21px;
-  font-weight: bold;
-  color: black;
-  text-transform: uppercase;
+  font-family: 'PT Sans', sans-serif;
+  font-size: 14px;
+  line-height: 21px;
   font-style: normal;
-  font-stretch: normal;
-  line-height: 26px; /* line-height: 26px; */
-
-  background-color: white;
+  text-align: center;
+  color: #000000;
+  background-color: #f2f2f2;
 }
 
-.visualy_hidden {
+.visually-hidden {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -29,185 +52,156 @@ a {
   text-decoration: none;
 }
 
-.site-menu {
-  font-family: PTSans, sans-serif;
+.site-navigation {
+  list-style: none;
   font-size: 14px;
   font-weight: bold;
   font-style: normal;
-  font-stretch: normal;
-  line-height: 1.86;
-  letter-spacing: normal;
-  color: black;
+  line-height: 26px;
+  color: #000000;
 }
 
-.site-navigation {
-  list-style: none;
-  text-align: center;
+.site-navigation a {
+  color: #000000;
 }
 
-.site-menu a{
-  color: black;
-}
-
-.site-menu a:hover{
+.site-navigation a:hover{
   color: #81b3d2;
 }
 
-.site-menu a:active{
+.site-navigation a:active{
   color: #b2b2b2;
 }
 
-.intro {
+.banner {
   background:
     url("../img/svg/intro-mask.svg") no-repeat,
     url("../img/background-photo.jpg") no-repeat;
-
-
 }
 
 .intro h1{
-  font-family: PTSans, sans-serif;
   font-size: 21px;
   font-weight: bold;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: 26px;  /* 1.24 */
-  letter-spacing: normal;
-  text-align: center;
-  color: black;
-  background-color: white;
+  line-height: 26px;
+  text-transform: uppercase;
+  background-color:#ffffff;
 }
 
 .intro h2{
-  font-family: PTSans, sans-serif;
   font-size: 14px;
-  font-weight: normal;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: 26px;  /* 1.86 */
-  letter-spacing: normal;
-  text-align: center;
+  line-height: 26px;
   color: #333333;
-  background-color: white;
+  background-color: #ffffff;
 }
 
-.features ol{
+.feature-list1 li{
   list-style: none;
+  background-color: #eeeeee;
+  text-transform: uppercase;
 }
 
-.feature-item__text {
-  background-color: #81b3d2;
-  color: #ffffff;
-}
-
-.feature-item h3 {
+.feature-list1 h3 {
   font-size: 21px;
   line-height: 21px;
   font-weight: bold;
-  text-align: center;
 }
 
-.feature-item__number,
-.feature-item__number_left,
-.feature-item__number_right,
-.feature-item__describtion,
-.feature-list2 p {
+.feature-item-textbox {
+  background-color: #81b3d2;
+  color: #ffffff;
   font-size: 14px;
   line-height: 21px;
-  text-align: center;
 }
 
-.features ul{
+
+.feature-list2{
   list-style: none;
 }
 
-.feature-list2 li:first-child {
+.feature-list2 h3 {
+  font-size: 21px;
+  font-weight: bold;
+}
+
+.feature-list2 .house {
   background: white url("../img/svg/icon-1.svg") no-repeat 50%;
 }
 
-.feature-list2 li:nth-child(2) {
+.feature-list2 .food {
   background: white url("../img/svg/icon-3.svg") no-repeat 50%;
 }
 
-.feature-list2 li:last-child {
+.feature-list2 .gifts {
   background: white url("../img/svg/icon-2.svg") no-repeat 50%;
 }
 
-.feature-list1 li:nth-child(n+3) {
-  background-color: #eeeeee:
-}
-
 .booking {
-  text-align: center;
-  font-size: 14px;
-  font-weight: normal;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: 24px; /*1.71;*/
-  letter-spacing: normal;
+  text-transform: uppercase;
 }
 
-.booking p b{
+/* .booking a{
+  color: #ffffff;
+} */
+
+.booking-lead{
   font-size: 30px;
   font-weight: bold;
-  line-height: 36px; /*  1.2; */
+  line-height: 36px;
 }
 
-.booking__search-link {
+a.booking-search-button {
   font-size: 21px;
   font-weight: bold;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: 26px; /*1.24;*/
-  letter-spacing: normal;
-  text-align: center;
+  line-height: 26px;
   color: #ffffff;
-}
-
-.booking__search-button {
-  width: 568px;
-  height: 86px;
   background-color: #766357;
 }
 
 .booking-popup label {
-  font-size: 14px;
   font-weight: bold;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: 26px;  /* 1.86 */
-  letter-spacing: normal;
+  font-size: 21px;
+  line-height: 26px;
+  text-transform: uppercase;
   text-align: left;
 }
 
 .booking-popup .button {
   font-size: 21px;
+  line-height: 26px;
+  text-transform: uppercase;
   font-weight: bold;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: 26px; /*1.24;*/
-  letter-spacing: normal;
-  text-align: center;
   color: #ffffff;
-
-  width: 568px;
-  height: 86px;
-  background-color: #766357;
+  background-color: #81b3d2;
 }
 
-.site-footer .sociallinks{
+.site-footer {
+  font-size: 21px;
+  line-height: 26px;
+}
+
+p.hashtag {
+  text-align: left;
+  font-weight: bold;
+}
+
+.copyright p{
+  text-align: right;
+}
+
+.sociallinks {
   list-style: none;
+  background-color: #81b3d2;
 }
 
-.sociallinks li:first-child {
+li.twitter {
   background: #81b3d2 url("../img/svg/twitter.svg") no-repeat 50%;
 
 }
 
-.sociallinks li:last-child {
+li.youtube{
   background-image: #81b3d2 url("../img/svg/youtube.svg") no-repeat 50%;
 }
 
-.sociallinks li:nth-child(2) {
+li.facebook {
   background-image: #81b3d2 url("../img/svg/fb-icon.svg") no-repeat 50%;
 }
