--- a/css/style.css
+++ b/css/style.css
@@ -173,7 +173,7 @@ a.booking-search-button:hover {
 }
 
 a.booking-search-button:active {
-  color: #ffffff4c;
+  color: rgba(255, 255, 255, 0.3);
   background-color: #503e33;
 }
 
