--- a/css/style.css
+++ b/css/style.css
@@ -208,6 +208,26 @@ a {
   background-color: #f2f2f2;
 }
 
+.booking-popup input::placeholder {
+  color: #000000;
+}
+
+.booking-popup input:hover {
+  /* font-family: "PT Sans", Arial, sans-serif;
+  font-size: 14px;
+  line-height: 26px;
+  font-weight: bold;
+  text-align: left;
+  text-transform: uppercase;
+  color: #000000; */
+  background-color: #ebebeb;
+}
+
+.booking-popup input:focus {
+  background-color: #ffffff;
+  outline: 2px solid #ebebeb;
+}
+
 .popap-submit-button {
   font-size: 21px;
   line-height: 26px;
