поправил кнопку  popap

--- a/css/style.css
+++ b/css/style.css
@@ -229,7 +229,7 @@ a {
   height: 86px;
   width: 568px;
   margin: 0 auto;
-  /* padding: 30px auto; */
+  padding: 30px;
 
   font-size: 21px;
   font-weight: bold;
