--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ a {
 /* Шапка с горизонтальной менюшкой */
 .main-header {
   background-color: #ffffff;
+ position: relative; /* чтобы логотип выравнивался относительно этого блока */
 }
 
 .header-logo {
@@ -132,7 +133,7 @@ a {
   /* min-height: 508px; */
 
   background:
-    url("../img/svg/intro-mask.svg") no-repeat 0 100%, /* Маска */
+    url("../img/svg/intro-mask.svg") no-repeat 0 calc(100% + 1px), /* Маска */
     url("../img/background-photo.jpg") no-repeat;
 }
 
